# black

./: .gitignore  Dockerfile  README.md  blackd.py  pyproject.toml  run.yml
blackd/: __main__.py  blackd.py
src/blackd/: __init__.py
